feat(gp-chat): enhanced UI theming, MCP registry improvements, and demo docs
Refine frontend components (DevPanel, model/persona pickers, chat surface,
tool call cards) with improved theming and layout. Harden MCP client registry
with better error handling and token forwarding. Add AiModelsConfig, clientId
utility, demo documentation (DEMO.md, DEMO-SECURITY.md), and HTML docs.
Update Docker/build config and README.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>