@@ -1,6 +1,8 @@
 package com.baskettecase.gpchat.chat;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 import org.springframework.web.socket.CloseStatus;
 import org.springframework.web.socket.TextMessage;
@@ -14,11 +16,13 @@ import java.util.concurrent.Executors;
 @Component
 public class ChatWebSocketHandler extends TextWebSocketHandler {
 
+    private static final Logger log = LoggerFactory.getLogger(ChatWebSocketHandler.class);
+
     private final ObjectMapper om = new ObjectMapper();
     private final ChatOrchestrator orchestrator;
     private final DemoModeService demoMode;
     private final ConversationStore conversations;
-    private final Executor exec = Executors.newVirtualThreadPerTaskExecutor();
+    private final Executor exec = Executors.newCachedThreadPool();
 
     public ChatWebSocketHandler(ChatOrchestrator o, DemoModeService d, ConversationStore cs) {
         this.orchestrator = o;
@@ -29,10 +33,11 @@ public class ChatWebSocketHandler extends TextWebSocketHandler {
     @Override
     protected void handleTextMessage(WebSocketSession session, TextMessage msg) throws Exception {
         var in = om.readValue(msg.getPayload(), WireMessages.Inbound.class);
-        String httpSessionId = (String) session.getAttributes().get("HTTP.SESSION.ID");
-        if (httpSessionId == null) httpSessionId = session.getId();
+        String clientId = (String) session.getAttributes().get("CLIENT_ID");
+        if (clientId == null) clientId = session.getId();
+        log.info("WS message: type={}, clientId={}", in.getClass().getSimpleName(), clientId);
 
-        final String sid = httpSessionId;
+        final String sid = clientId;
         exec.execute(() -> {
             try {
                 switch (in) {
